# franzoxide

./: .clippy.toml  .gitignore  .windsurfrules  Cargo.toml  Dockerfile  Dockerfile.test  GAP.md  LICENSE  README.md  build.rs  docker-compose.override.yml  docker-compose.yml  integration_tests.yml  test_grpc_sink.py
.github/workflows/: ci.yml
config/: connect.json
proto/: connector.proto
src/: lib.rs  main.rs  proto.rs
src/connector/: common.rs  manager.rs  mod.rs
src/connector/sink/: format.rs  mod.rs  s3.rs
src/connector/source/: kafka.rs
src/grpc/: service.rs
src/utils/: config.rs  error.rs
tests/: integration_test.rs
