[package]
name = "rust-connect"
version = "0.1.0"
edition = "2021"
description = "A Kafka Connect clone written in Rust with gRPC interface"
authors = ["Laurent Valdes"]

[dependencies]
# gRPC and Protocol Buffers
tonic = "0.9"
prost = "0.11"
tokio = { version = "1.28", features = ["full"] }
tokio-stream = "0.1"
prost-types = "0.11"

# Kafka client
rdkafka = { version = "0.32", features = ["cmake-build", "ssl"] }

# AWS S3 client
aws-sdk-s3 = "0.28"
aws-config = "0.55"
aws-types = "0.55"

# Async runtime and utilities
async-trait = "0.1"
futures = "0.3"
futures-util = "0.3"
tower = "0.4"
hyper = "0.14"

# Logging and error handling
log = "0.4"
env_logger = "0.10"
thiserror = "1.0"
anyhow = "1.0"

# Serialization/Deserialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
base64 = "0.13"

# Date and time
chrono = { version = "0.4", features = ["serde"] }

# Testing
mockall = "0.11"
serial_test = "2.0"

[dev-dependencies]
tempfile = "3.6"
test-log = "0.2"

[build-dependencies]
tonic-build = "0.9"
