[package]
name = "franzoxide"
version = "0.1.0"
edition = "2021"
description = "Franzoxide: A high-performance Kafka Connect clone written in Rust"
authors = ["Laurent Valdes"]

[dependencies]
# gRPC and Protocol Buffers
tonic = "0.12.3"
prost = "0.13.5"
tokio = { version = "1.44", features = ["full"] }
tokio-stream = "0.1"
prost-types = "0.13.5"
tonic-reflection = "0.12.3"

# Kafka client
rdkafka = { version = "0.37", features = ["cmake-build", "ssl"] }

# AWS S3 client
aws-sdk-s3 = { version = "1.78", features = ["behavior-version-latest"] }
aws-config = { version = "1.6", features = ["behavior-version-latest"] }
aws-types = "1.3"

# Async runtime and utilities
async-trait = "0.1"
futures = "0.3"
futures-util = "0.3"
tower = "0.5"
hyper = "1.6"

# Logging and error handling
log = "0.4"
env_logger = "0.11"
thiserror = "2.0"
anyhow = "1.0"

# Serialization/Deserialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
base64 = "0.22"

# Date and time
chrono = { version = "0.4", features = ["serde"] }

# Parquet support
arrow = "54.2.1"
parquet = "54.2.1"
arrow-array = "54.2.1"
arrow-schema = "54.2.1"

# HTTP client for testing
reqwest = { version = "0.12.13", features = ["json"] }

# Avro support
apache-avro = "0.17.0"
schema_registry_converter = { version = "4.2.0", features = ["avro"] }

# Compression
flate2 = "1.1"
snap = "1.1"

# Testing
mockall = "0.13"
serial_test = "3.2"

[dev-dependencies]
testcontainers = "0.23.3"
uuid = { version = "1.7", features = ["v4"] }
tempfile = "3.18"
test-log = "0.2"

[build-dependencies]
tonic-build = "0.12.3"
